fix: scroll smooth behavior not showing html5 errors
This is very strange. I will find out the reason and fix it soon

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,9 +1,8 @@
+/* html {
+  scroll-behavior: smooth;
+} */
 @tailwind base;
 
 @tailwind components;
 
 @tailwind utilities;
-
-html {
-  scroll-behavior: smooth;
-}
